FIX : vertical and horizontal scroll issue resolved

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -17,3 +17,18 @@ body {
   background-color: #f2f2f2;
   font-family: "Roboto", sans-serif;
 }
+
+/* for custom scrollbar for webkit browser*/
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 1.5rem;
+  background-color: rgb(179, 171, 171);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
