--- a/client/src/components/table/Table.scss
+++ b/client/src/components/table/Table.scss
@@ -1,6 +1,5 @@
-.table {
+.table-main {
   width: 100%;
-  overflow: auto;
   background-color: #ffffff;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
@@ -8,15 +7,19 @@
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 
   h3 {
+    position: sticky;
+    left: 0;
     text-align: center;
     font-weight: 600;
     font-size: 1.5rem;
     color: #5d87ff;
     text-transform: capitalize;
-    margin-top: 1rem;
+    padding-top: 1rem;
   }
 
   .table-toolbar {
+    position: sticky;
+    left: 0;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -47,47 +50,51 @@
     }
   }
 
-  .table-header {
-    background-color: rgba(255, 255, 255, 0.3);
+  .table {
+    width: 100%;
+    overflow-x: auto;
 
-    table {
-      width: 100%;
-      table-layout: fixed;
-      background-color: #5d87ff;
+    .table-header {
+      background-color: rgba(255, 255, 255, 0.3);
 
-      th {
-        padding: 15px;
-        text-align: left;
-        font-weight: 600;
-        font-size: 1rem;
-        color: #fff;
+      table {
+        width: 100%;
+        table-layout: fixed;
+        background-color: #5d87ff;
 
-        text-transform: uppercase;
+        th {
+          padding: 15px;
+          text-align: left;
+          font-weight: 600;
+          font-size: 1rem;
+          color: #fff;
+
+          text-transform: uppercase;
+        }
       }
     }
-  }
 
-  .table-body {
-    margin-top: 0px;
-    overflow-x: auto;
-    max-height: calc(100vh - 15rem);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    .table-body {
+      margin-top: 0px;
+      max-height: calc(100vh - 15rem);
+      border: 1px solid rgba(255, 255, 255, 0.3);
 
-    table {
-      width: 100%;
-      table-layout: fixed;
+      table {
+        width: 100%;
+        table-layout: fixed;
 
-      tr:nth-of-type(even) {
-        background: #e9e9e9;
-      }
+        tr:nth-of-type(even) {
+          background: #e9e9e9;
+        }
 
-      td {
-        padding: 14px;
-        font-size: 1rem;
-        font-weight: 400;
-        text-align: left;
-        vertical-align: middle;
-        border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+        td {
+          padding: 14px;
+          font-size: 1rem;
+          font-weight: 400;
+          text-align: left;
+          vertical-align: middle;
+          border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+        }
       }
     }
   }
@@ -118,19 +125,5 @@
         }
       }
     }
-  }
-
-  /* for custom scrollbar for webkit browser*/
-
-  ::-webkit-scrollbar {
-    width: 6px;
-  }
-  ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
-  ::-webkit-scrollbar-thumb {
-    border-radius: 1.5rem;
-    background-color: gray;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
 }
